<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tests.french.TestWritingActivityFrench">

    <TextView
        android:id="@+id/phrase_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/repondre_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repondre"
        android:layout_below="@id/phrase_text_view"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"/>

    <Button
        android:id="@+id/verifier_reponse_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifier_reponse"
        android:layout_below="@id/repondre_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/reponse_incorrecte_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reponse_incorrecte"
        android:layout_below="@id/verifier_reponse_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

</RelativeLayout>
