<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tests.english.TestSelectionActivityEnglish">

    <Button
        android:id="@+id/button_test_speaking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/test_speaking" />

    <Button
        android:id="@+id/button_test_writing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_writing"
        android:layout_below="@id/button_test_speaking"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/button_test_correct_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_correct_answer"
        android:layout_below="@id/button_test_writing"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>
