<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tests.french.TestSelectionActivityFrench">

    <Button
        android:id="@+id/button_test_speaking_french"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/test_parler" />

    <Button
        android:id="@+id/button_test_writing_french"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_r_daction"
        android:layout_below="@id/button_test_speaking_french"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/button_test_correct_answer_french"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_la_bonne_r_ponse"
        android:layout_below="@id/button_test_writing_french"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>
